--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-RK</title>
-    <link rel="stylesheet" href="C:\Users\saifu\Downloads\PORTFOLIO\style.css"/>
+    <link rel="stylesheet" style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
@@ -25,7 +25,7 @@
     
     <section class="home" id="home">
         <div class="home-img">
-            <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\im0.jpeg" alt="">
+            <img src="assets\im0.jpeg" alt="">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>Rayan</span></h1>
@@ -125,73 +125,73 @@
             <div class="row" id="skillsContainer">
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\figma.jpeg" alt="">
+                        <img src="assets\figma.jpeg" alt="">
                         <span>Figma</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\canva.jpeg" alt="">
+                        <img src="assets\canva.jpeg" alt="">
                         <span>Canva</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\sketch book.jpeg" alt="">
+                        <img src="assets\sketch book.jpeg" alt="">
                         <span>Sketch Book</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\flutter.jpeg" alt="">
+                        <img src="assets\flutter.jpeg" alt="">
                         <span>Flutter</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\wix.jpeg" alt="">
+                        <img src="assets\wix.jpeg" alt="">
                         <span>Wix</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\android studio.jpeg" alt="">
+                        <img src="assets\android studio.jpeg" alt="">
                         <span>Android Studio</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\c.jpeg" alt="">
+                        <img src="assets\c.jpeg" alt="">
                         <span>C</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\java.jpeg" alt="">
+                        <img src="assets\java.jpeg" alt="">
                         <span>Java</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\kotlin.jpeg" alt="">
+                        <img src="assets\kotlin.jpeg" alt="">
                         <span>Kotlin</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\html.jpeg" alt="">
+                        <img src="assets\html.jpeg" alt="">
                         <span>HTML</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\css.jpeg" alt="">
+                        <img src="assets\css.jpeg" alt="">
                         <span>Css</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="c:\Users\saifu\Downloads\PORTFOLIO\assets\js.jpeg" alt="">
+                        <img src="assets\js.jpeg" alt="">
                         <span>Jss</span>
                     </div>
                 </div>
@@ -300,5 +300,5 @@
             ©️ Rk_app_arcade | All Rights Reserved
         </p>
      </footer>
-    <script src="C:\Users\saifu\Downloads\PORTFOLIO\script.js"></script>
+    <script src="script.js"></script>
   </body>
