--- a/index.html
+++ b/index.html
@@ -126,6 +126,29 @@
             </div>
         </div>
      </section>
+     <section>
+    <div class="Works">
+        <div class="background-container"></div> <!-- Add this line -->
+        <div class="heading">My Works</div>
+        <div class="card-container">
+            <div id="card1" class="card" onclick="location.href='page1.html'">
+                <div class="card-text">UI/UX Design</div>
+            </div>
+            <div id="card2" class="card" onclick="location.href='page1.html'">
+                <div class="card-text">Web Dev</div>
+            </div>
+            <div id="card3" class="card" onclick="location.href='page1.html'">
+                <div class="card-text">Android Dev</div>
+            </div>
+            <div id="card4" class="card" onclick="location.href='art.html'">
+                <div class="card-text">ART</div>
+            </div>
+            <div id="card5" class="card" onclick="location.href='page1.html'">
+                <div class="card-text">Products</div>
+            </div>
+        </div>
+    </div>
+</section>
      <section class="skills" id="skills">
         <h2 class="heading"><span>Skills</span></h2>
         <div class="container">
